# sandbox

python/FoxDot/: tutorial.py
python/mcp/clients/get_weather/: demo.ipynb  pyproject.toml
python/mcp/servers/get_weather/: demo.py  pyproject.toml
